Final Changes Added and deployed

--- a/VisaTracking/VisaTracking/Views/Enrollments/Create.cshtml
+++ b/VisaTracking/VisaTracking/Views/Enrollments/Create.cshtml
@@ -96,6 +96,13 @@
                     </div>
                     <div class="row align-items-center mt-4">
                         <div class="col">
+                            <label asp-for="Remarks" class="control-label"></label>
+                            <textarea asp-for="Remarks" class="form-control"> </textarea>
+                            <span asp-validation-for="Remarks" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row align-items-center mt-4">
+                        <div class="col">
                             <label class="control-label">Attach File(s)</label>
                             <input class="form-control" type="file" name="files" accept="image/jpg, image/jpeg, application/pdf" multiple />
                         </div>
