--- a/VisaTracking/VisaTracking/Views/Enrollments/Delete.cshtml
+++ b/VisaTracking/VisaTracking/Views/Enrollments/Delete.cshtml
@@ -92,6 +92,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FeePaid)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Remarks)
+        </dt>
+        <dd class="col-sm-10">
+            <textarea class="form-control" readonly>@Model.Remarks</textarea>
+        </dd>
     </dl>
     
     <form asp-action="Delete">
